chore: update config

--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,13 @@
 {
-    "qwen2.5-72b-instruct": {
-        "url": "https://ai.gitee.com/api/serverless/Qwen2.5-72B-Instruct/chat/completions",
-        "key": ""
-    },
-    "*": {
-        "url": "https://ai.gitee.com/api/serverless/Qwen2.5-72B-Instruct/chat/completions",
-        "key": ""
+    "*": {},
+    "gitee": {
+        "Qwen2.5-72B-Instruct": {
+            "chat-url": "https://ai.gitee.com/api/serverless/Qwen2.5-72B-Instruct/chat/completions"
+        },
+        "*": {
+            "domain": "https://ai.gitee.com",
+            "chat-url": "https://ai.gitee.com/v1/chat/completions",
+            "key": "xxxxxx"
+        }
     }
 }
