chore: update example

--- a/config.example.json
+++ b/config.example.json
@@ -25,7 +25,7 @@
             "domain": "https://ai.gitee.com",
             "chat-url": "https://ai.gitee.com/api/serverless/{model_name}/chat/completions",
             "key": "xxxxx1,xxxxx2",
-            "path_redirect": {
+            "redirect": {
                 "/v1/audio/speech": "/models/{model_name}"
             }
         }
