chore: 更新Docker构建配置，移除不必要的平台并调整ARM64平台的操作系统版本

--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -21,11 +21,8 @@ jobs:
             os: ubuntu-latest
           - platform: linux/386
             os: ubuntu-latest
-          - platform: linux/ppc64le
-            os: ubuntu-latest
           - platform: linux/arm64
-            os: ubuntu-latest
-            # os: [self-hosted, linux, ARM64]
+            os: ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     name: Build ${{ matrix.platform }} Image
     steps:
